@@ -1,5 +1,12 @@
 2011-11-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCCsymt.c,
+	  src/SDCCerr.h,
+	  src/SDCCerr.c:
+	  Error message for attemting to use named address spacces for auto variables.
+
+2011-11-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCCopt.c:
 	  Fix broken control and data flow handling (regression tests passing now, exept for bug-895992.c).
 
